revisionbar work