@@ -4,30 +4,38 @@ import java.util.HashMap;
 import java.util.Map;
 
 /**
- * A class to compare vectors of objects. The result of comparison is a list of <code>change</code> objects which form
- * an edit script. The objects compared are traditionally lines of text from two files. Comparison options such as
- * "ignore whitespace" are implemented by modifying the <code>equals</code> and <code>hashcode</code> methods for the
- * objects compared.
+ * A class to compare vectors of objects. The result of comparison is a list of
+ * <code>change</code> objects which form an edit script. The objects compared
+ * are traditionally lines of text from two files. Comparison options such as
+ * "ignore whitespace" are implemented by modifying the <code>equals</code> and
+ * <code>hashcode</code> methods for the objects compared.
  * <p>
  * The basic algorithm is described in: </br>
- * "An O(ND) Difference Algorithm and its Variations", Eugene Myers, Algorithmica Vol. 1 No. 2, 1986, p 251.
+ * "An O(ND) Difference Algorithm and its Variations", Eugene Myers,
+ * Algorithmica Vol. 1 No. 2, 1986, p 251.
  * <p>
- * This class outputs different results from GNU diff 1.15 on some inputs. Our results are actually better (smaller
- * change list, smaller total size of changes), but it would be nice to know why. Perhaps there is a memory overwrite
- * bug in GNU diff 1.15.
+ * This class outputs different results from GNU diff 1.15 on some inputs. Our
+ * results are actually better (smaller change list, smaller total size of
+ * changes), but it would be nice to know why. Perhaps there is a memory
+ * overwrite bug in GNU diff 1.15.
  * 
- * @author Stuart D. Gathman, translated from GNU diff 1.15 Copyright (C) 2000 Business Management Systems, Inc.
+ * @author Stuart D. Gathman, translated from GNU diff 1.15 Copyright (C) 2000
+ *         Business Management Systems, Inc.
  *         <p>
- *         This program is free software; you can redistribute it and/or modify it under the terms of the GNU General
- *         Public License as published by the Free Software Foundation; either version 1, or (at your option) any later
- *         version.
+ *         This program is free software; you can redistribute it and/or modify
+ *         it under the terms of the GNU General Public License as published by
+ *         the Free Software Foundation; either version 1, or (at your option)
+ *         any later version.
  *         <p>
- *         This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- *         implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
- *         for more details.
+ *         This program is distributed in the hope that it will be useful, but
+ *         WITHOUT ANY WARRANTY; without even the implied warranty of
+ *         MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ *         General Public License for more details.
  *         <p>
- *         You should have received a copy of the <a href=COPYING.txt> GNU General Public License</a> along with this
- *         program; if not, write to the Free Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ *         You should have received a copy of the <a href=COPYING.txt> GNU
+ *         General Public License</a> along with this program; if not, write to
+ *         the Free Software Foundation, Inc., 675 Mass Ave, Cambridge, MA
+ *         02139, USA.
  */
 public class Diff
 {
@@ -39,32 +47,33 @@ public class Diff
   private int equiv_max = 1;
 
   /**
-   * When set to true, the comparison uses a speed_large_files to speed it up. With this speed_large_files, for files
-   * with a constant small density of changes, the algorithm is linear in the file size.
+   * When set to true, the comparison uses a speed_large_files to speed it up.
+   * With this speed_large_files, for files with a constant small density of
+   * changes, the algorithm is linear in the file size.
    */
   public boolean speed_large_files = false;
 
   /**
-   * When set to true, the algorithm returns a guarranteed minimal set of changes. This makes things slower, sometimes
-   * much slower.
+   * When set to true, the algorithm returns a guarranteed minimal set of changes.
+   * This makes things slower, sometimes much slower.
    */
   private int[] xvec; /* Vectors being compared. */
   private int[] yvec; /* Vectors being compared. */
   private int[] fdiag;
-  /* Vector, indexed by diagonal, containing
-     the X coordinate of the point furthest
-     along the given diagonal in the forward
-     search of the edit matrix. */
+  /*
+   * Vector, indexed by diagonal, containing the X coordinate of the point
+   * furthest along the given diagonal in the forward search of the edit matrix.
+   */
   private int[] bdiag;
-  /* Vector, indexed by diagonal, containing
-     the X coordinate of the point furthest
-     along the given diagonal in the backward
-     search of the edit matrix. */
+  /*
+   * Vector, indexed by diagonal, containing the X coordinate of the point
+   * furthest along the given diagonal in the backward search of the edit matrix.
+   */
   private int fdiagoff;
-  /* Vector, indexed by diagonal, containing
-     the X coordinate of the point furthest
-     along the given diagonal in the backward
-     search of the edit matrix. */
+  /*
+   * Vector, indexed by diagonal, containing the X coordinate of the point
+   * furthest along the given diagonal in the backward search of the edit matrix.
+   */
   private int bdiagoff;
   private final file_data[] filevec = new file_data[2];
   private int cost;
@@ -72,39 +81,38 @@ public class Diff
   private boolean minimal = true;
 
   /**
-   * Prepare to find differences between two arrays. Each element of the arrays is translated to an "equivalence number"
-   * based on the result of <code>equals</code>. The original Object arrays are no longer needed for computing the
-   * differences. They will be needed again later to print the results of the comparison as an edit script, if desired.
+   * Prepare to find differences between two arrays. Each element of the arrays is
+   * translated to an "equivalence number" based on the result of
+   * <code>equals</code>. The original Object arrays are no longer needed for
+   * computing the differences. They will be needed again later to print the
+   * results of the comparison as an edit script, if desired.
    */
-  public Diff(Object[] a,
-      Object[] b)
+  public Diff(Object[] a, Object[] b)
   {
     Map h = new HashMap(a.length + b.length);
 
-    filevec[0] = new file_data(a,
-                               h);
-    filevec[1] = new file_data(b,
-                               h);
+    filevec[0] = new file_data(a, h);
+    filevec[1] = new file_data(b, h);
   }
 
   /**
-   * Find the midpoint of the shortest edit script for a specified portion of the two files. We scan from the beginnings
-   * of the files, and simultaneously from the ends, doing a breadth-first search through the space of edit-sequence.
-   * When the two searches meet, we have found the midpoint of the shortest edit sequence. The value returned is the
-   * number of the diagonal on which the midpoint lies. The diagonal number equals the number of inserted lines minus
-   * the number of deleted lines (counting only lines before the midpoint). The edit cost is stored into COST; this is
-   * the total number of lines inserted or deleted (counting only lines before the midpoint). This function assumes that
-   * the first lines of the specified portions of the two files do not match, and likewise that the last lines do not
-   * match. The caller must trim matching lines from the beginning and end of the portions it is going to specify. Note
-   * that if we return the "wrong" diagonal value, or if the value of bdiag at that diagonal is "wrong", the worst this
-   * can do is cause suboptimal diff output. It cannot cause incorrect diff output.
+   * Find the midpoint of the shortest edit script for a specified portion of the
+   * two files. We scan from the beginnings of the files, and simultaneously from
+   * the ends, doing a breadth-first search through the space of edit-sequence.
+   * When the two searches meet, we have found the midpoint of the shortest edit
+   * sequence. The value returned is the number of the diagonal on which the
+   * midpoint lies. The diagonal number equals the number of inserted lines minus
+   * the number of deleted lines (counting only lines before the midpoint). The
+   * edit cost is stored into COST; this is the total number of lines inserted or
+   * deleted (counting only lines before the midpoint). This function assumes that
+   * the first lines of the specified portions of the two files do not match, and
+   * likewise that the last lines do not match. The caller must trim matching
+   * lines from the beginning and end of the portions it is going to specify. Note
+   * that if we return the "wrong" diagonal value, or if the value of bdiag at
+   * that diagonal is "wrong", the worst this can do is cause suboptimal diff
+   * output. It cannot cause incorrect diff output.
    */
-  private void diag(int xoff,
-      int xlim,
-      int yoff,
-      int ylim,
-      boolean find_minimal,
-      Partition part)
+  private void diag(int xoff, int xlim, int yoff, int ylim, boolean find_minimal, Partition part)
   {
     int dmin = xoff - ylim; // Minimum valid diagonal.
     int dmax = xlim - yoff; // Maximum valid diagonal.
@@ -113,12 +121,14 @@ public class Diff
     int fmin = fmid; // Limits of top-down search.
     int fmax = fmid; // Limits of top-down search.
     int bmin = bmid; // Limits of bottom-up search.
-    /* True if southeast corner is on an odd
-    diagonal with respect to the northwest. */
+    /*
+     * True if southeast corner is on an odd diagonal with respect to the northwest.
+     */
 
     int bmax = bmid; // Limits of bottom-up search.
-    /* True if southeast corner is on an odd
-    diagonal with respect to the northwest. */
+    /*
+     * True if southeast corner is on an odd diagonal with respect to the northwest.
+     */
 
     boolean odd = (fmid - bmid & 1) != 0;
 
@@ -255,12 +265,13 @@ public class Diff
         continue;
       }
 
-      /* Heuristic: check occasionally for a diagonal that has made
-         lots of progress compared with the edit distance.
-         If we have any such, find the one that has made the most
-         progress and return it as if it had succeeded.
-         With this speed_large_files, for files with a constant small density
-         of changes, the algorithm is linear in the file size.  */
+      /*
+       * Heuristic: check occasionally for a diagonal that has made lots of progress
+       * compared with the edit distance. If we have any such, find the one that has
+       * made the most progress and return it as if it had succeeded. With this
+       * speed_large_files, for files with a constant small density of changes, the
+       * algorithm is linear in the file size.
+       */
       if (c > 200 && big_snake && speed_large_files)
       {
         int best = 0;
@@ -276,8 +287,10 @@ public class Diff
           {
             if (v > best && xoff + SNAKE_LIMIT <= x && x < xlim && yoff + SNAKE_LIMIT <= y && y < ylim)
             {
-              /* We have a good enough best diagonal;
-                 now insist that it end with a significant snake.  */
+              /*
+               * We have a good enough best diagonal; now insist that it end with a
+               * significant snake.
+               */
               for (int k = 1; xvec[x - k] == yvec[y - k]; k++)
               {
                 if (k == SNAKE_LIMIT)
@@ -311,8 +324,10 @@ public class Diff
           {
             if (v > best && xoff < x && x <= xlim - SNAKE_LIMIT && yoff < y && y <= ylim - SNAKE_LIMIT)
             {
-              /* We have a good enough best diagonal;
-                 now insist that it end with a significant snake.  */
+              /*
+               * We have a good enough best diagonal; now insist that it end with a
+               * significant snake.
+               */
               for (int k = 0; xvec[x + k] == yvec[y + k]; k++)
               {
                 if (k == SNAKE_LIMIT - 1)
@@ -335,8 +350,10 @@ public class Diff
         }
       }
 
-      /* Heuristic: if we've gone well beyond the call of duty,
-         give up and report halfway between our best results so far.  */
+      /*
+       * Heuristic: if we've gone well beyond the call of duty, give up and report
+       * halfway between our best results so far.
+       */
       if (c >= too_expensive)
       {
         int fxybest;
@@ -344,12 +361,11 @@ public class Diff
         int fxbest = 0;
         int bxbest = 0;
 
-        /* Find forward diagonal that maximizes X + Y.  */
+        /* Find forward diagonal that maximizes X + Y. */
         fxybest = -1;
         for (d = fmax; d >= fmin; d -= 2)
         {
-          int x = Math.min(fdiag[d],
-                           xlim);
+          int x = Math.min(fdiag[d], xlim);
           int y = x - d;
           if (ylim < y)
           {
@@ -363,12 +379,11 @@ public class Diff
           }
         }
 
-        /* Find backward diagonal that minimizes X + Y.  */
+        /* Find backward diagonal that minimizes X + Y. */
         bxybest = Integer.MAX_VALUE;
         for (d = bmax; d >= bmin; d -= 2)
         {
-          int x = Math.max(xoff,
-                           bdiag[d]);
+          int x = Math.max(xoff, bdiag[d]);
           int y = x - d;
           if (y < yoff)
           {
@@ -382,7 +397,7 @@ public class Diff
           }
         }
 
-        /* Use the better of the two diagonals.  */
+        /* Use the better of the two diagonals. */
         if ((xlim + ylim) - bxybest < fxybest - (xoff + yoff))
         {
           part.xmid = fxbest;
@@ -403,16 +418,14 @@ public class Diff
   }
 
   /**
-   * Compare in detail contiguous subsequences of the two files which are known, as a whole, to match each other. The
-   * results are recorded in the vectors filevec[N].changed_flag, by storing a 1 in the element for each line that is an
-   * insertion or deletion. The subsequence of file 0 is [XOFF, XLIM) and likewise for file 1. Note that XLIM, YLIM are
-   * exclusive bounds. All line numbers are origin-0 and discarded lines are not counted.
+   * Compare in detail contiguous subsequences of the two files which are known,
+   * as a whole, to match each other. The results are recorded in the vectors
+   * filevec[N].changed_flag, by storing a 1 in the element for each line that is
+   * an insertion or deletion. The subsequence of file 0 is [XOFF, XLIM) and
+   * likewise for file 1. Note that XLIM, YLIM are exclusive bounds. All line
+   * numbers are origin-0 and discarded lines are not counted.
    */
-  private void compareseq(int xoff,
-      int xlim,
-      int yoff,
-      int ylim,
-      boolean find_minimal)
+  private void compareseq(int xoff, int xlim, int yoff, int ylim, boolean find_minimal)
   {
     /* Slide down the bottom initial diagonal. */
     while (xoff < xlim && yoff < ylim && xvec[xoff] == yvec[yoff])
@@ -446,25 +459,12 @@ public class Diff
     {
       Partition part = new Partition();
 
-      /* Find a point of correspondence in the middle of the files.  */
-      diag(xoff,
-           xlim,
-           yoff,
-           ylim,
-           find_minimal,
-           part);
+      /* Find a point of correspondence in the middle of the files. */
+      diag(xoff, xlim, yoff, ylim, find_minimal, part);
 
-      /* Use the partitions to split this problem into subproblems.  */
-      compareseq(xoff,
-                 part.xmid,
-                 yoff,
-                 part.ymid,
-                 part.lo_minimal);
-      compareseq(part.xmid,
-                 xlim,
-                 part.ymid,
-                 ylim,
-                 part.hi_minimal);
+      /* Use the partitions to split this problem into subproblems. */
+      compareseq(xoff, part.xmid, yoff, part.ymid, part.lo_minimal);
+      compareseq(part.xmid, xlim, part.ymid, ylim, part.hi_minimal);
     }
   }
 
@@ -487,7 +487,8 @@ public class Diff
   }
 
   /**
-   * Scan the tables of which lines are inserted and deleted, producing an edit script in forward order.
+   * Scan the tables of which lines are inserted and deleted, producing an edit
+   * script in forward order.
    */
   private change build_script()
   {
@@ -499,7 +500,7 @@ public class Diff
     int i0 = len0;
     int i1 = len1;
 
-    /* Note that changedN[-1] does exist, and contains 0.  */
+    /* Note that changedN[-1] does exist, and contains 0. */
     while (i0 >= 0 || i1 >= 0)
     {
       if (changed0[i0] || changed1[i1])
@@ -507,7 +508,7 @@ public class Diff
         int line0 = i0;
         int line1 = i1;
 
-        /* Find # lines changed here in each file.  */
+        /* Find # lines changed here in each file. */
         while (changed0[i0])
         {
           --i0;
@@ -517,15 +518,11 @@ public class Diff
           --i1;
         }
 
-        /* Record this change.  */
-        script = new change(i0,
-                            i1,
-                            line0 - i0,
-                            line1 - i1,
-                            script);
+        /* Record this change. */
+        script = new change(i0, i1, line0 - i0, line1 - i1, script);
       }
 
-      /* We have reached lines in the two files that match each other.  */
+      /* We have reached lines in the two files that match each other. */
       i0--;
       i1--;
     }
@@ -533,23 +530,27 @@ public class Diff
     return script;
   }
 
-  /* Report the differences of two files.  DEPTH is the current directory
-     depth. */
+  /*
+   * Report the differences of two files. DEPTH is the current directory depth.
+   */
   public change diff_2()
   {
-    /* Some lines are obviously insertions or deletions
-       because they don't match anything.  Detect them now,
-       and avoid even thinking about them in the main comparison algorithm.  */
+    /*
+     * Some lines are obviously insertions or deletions because they don't match
+     * anything. Detect them now, and avoid even thinking about them in the main
+     * comparison algorithm.
+     */
     long time = System.currentTimeMillis();
 
     discard_confusing_lines();
     /*
-       System.out.println("discard took : " + (System.currentTimeMillis() - time)
-         + " msec.");
+     * System.out.println("discard took : " + (System.currentTimeMillis() - time) +
+     * " msec.");
      */
 
-    /* Now do the main comparison algorithm, considering just the
-       undiscarded lines.  */
+    /*
+     * Now do the main comparison algorithm, considering just the undiscarded lines.
+     */
     xvec = filevec[0].undiscarded;
     yvec = filevec[1].undiscarded;
 
@@ -560,28 +561,30 @@ public class Diff
     bdiag = new int[diags];
     bdiagoff = filevec[1].nondiscarded_lines + 1;
 
-    compareseq(0,
-               filevec[0].nondiscarded_lines,
-               0,
-               filevec[1].nondiscarded_lines,
-               minimal);
+    compareseq(0, filevec[0].nondiscarded_lines, 0, filevec[1].nondiscarded_lines, minimal);
     fdiag = null;
     bdiag = null;
 
-    /* Modify the results slightly to make them prettier
-       in cases where that can validly be done.  */
+    /*
+     * Modify the results slightly to make them prettier in cases where that can
+     * validly be done.
+     */
     shift_boundaries();
 
-    /* Get the results of comparison in the form of a chain
-       of `struct change's -- an edit script.  */
+    /*
+     * Get the results of comparison in the form of a chain of `struct change's --
+     * an edit script.
+     */
     return build_script();
   }
 
   /**
-   * The result of comparison is an "edit script": a chain of change objects. Each change represents one place where
-   * some lines are deleted and some are inserted. LINE0 and LINE1 are the first affected lines in the two files (origin
-   * 0). DELETED is the number of lines deleted here from file 0. INSERTED is the number of lines inserted here in file
-   * 1. If DELETED is 0 then LINE0 is the number of the line before which the insertion was done; vice versa for
+   * The result of comparison is an "edit script": a chain of change objects. Each
+   * change represents one place where some lines are deleted and some are
+   * inserted. LINE0 and LINE1 are the first affected lines in the two files
+   * (origin 0). DELETED is the number of lines deleted here from file 0. INSERTED
+   * is the number of lines inserted here in file 1. If DELETED is 0 then LINE0 is
+   * the number of the line before which the insertion was done; vice versa for
    * INSERTED and LINE1.
    */
   public static class change
@@ -598,23 +601,20 @@ public class Diff
     public final int line1;
 
     /**
-     * Cons an additional entry onto the front of an edit script OLD. LINE0 and LINE1 are the first affected lines in
-     * the two files (origin 0). DELETED is the number of lines deleted here from file 0. INSERTED is the number of
-     * lines inserted here in file 1. If DELETED is 0 then LINE0 is the number of the line before which the insertion
-     * was done; vice versa for INSERTED and LINE1.
+     * Cons an additional entry onto the front of an edit script OLD. LINE0 and
+     * LINE1 are the first affected lines in the two files (origin 0). DELETED is
+     * the number of lines deleted here from file 0. INSERTED is the number of lines
+     * inserted here in file 1. If DELETED is 0 then LINE0 is the number of the line
+     * before which the insertion was done; vice versa for INSERTED and LINE1.
      */
-    change(int line0,
-        int line1,
-        int deleted,
-        int inserted,
-        change old)
+    change(int line0, int line1, int deleted, int inserted, change old)
     {
       this.line0 = line0;
       this.line1 = line1;
       this.inserted = inserted;
       this.deleted = deleted;
       this.link = old;
-      //System.err.println(line0+","+line1+","+inserted+","+deleted);
+      // System.err.println(line0+","+line1+","+inserted+","+deleted);
     }
 
     public void print()
@@ -640,15 +640,17 @@ public class Diff
     /** Allocate changed array for the results of comparison. */
     void clear()
     {
-      /* Allocate a flag for each line of each file, saying whether that line
-         is an insertion or deletion.
-         Allocate an extra element, always zero, at each end of each vector.
+      /*
+       * Allocate a flag for each line of each file, saying whether that line is an
+       * insertion or deletion. Allocate an extra element, always zero, at each end of
+       * each vector.
        */
       changed_flag = new boolean[buffered_lines + 2];
     }
 
     /**
-     * Return equiv_count[I] as the number of lines in this file that fall in equivalence class I.
+     * Return equiv_count[I] as the number of lines in this file that fall in
+     * equivalence class I.
      * 
      * @return the array of equivalence class counts.
      */
@@ -665,15 +667,17 @@ public class Diff
     }
 
     /**
-     * Discard lines that have no matches in another file. A line which is discarded will not be considered by the
-     * actual comparison algorithm; it will be as if that line were not in the file. The file's `realindexes' table maps
-     * virtual line numbers (which don't count the discarded lines) into real line numbers; this is how the actual
-     * comparison algorithm produces results that are comprehensible when the discarded lines are counted.
+     * Discard lines that have no matches in another file. A line which is discarded
+     * will not be considered by the actual comparison algorithm; it will be as if
+     * that line were not in the file. The file's `realindexes' table maps virtual
+     * line numbers (which don't count the discarded lines) into real line numbers;
+     * this is how the actual comparison algorithm produces results that are
+     * comprehensible when the discarded lines are counted.
      * <p>
-     * When we discard a line, we also mark it as a deletion or insertion so that it will be printed in the output.
+     * When we discard a line, we also mark it as a deletion or insertion so that it
+     * will be printed in the output.
      * 
-     * @param f
-     *          the other file
+     * @param f the other file
      */
     void discard_confusing_lines(file_data f)
     {
@@ -681,9 +685,10 @@ public class Diff
       /* Set up table of which lines are going to be discarded. */
       byte[] discarded = discardable(f.equivCount());
 
-      /* Don't really discard the provisional lines except when they occur
-         in a run of discardables, with nonprovisionals at the beginning
-         and end.  */
+      /*
+       * Don't really discard the provisional lines except when they occur in a run of
+       * discardables, with nonprovisionals at the beginning and end.
+       */
       filterDiscards(discarded);
 
       /* Actually discard the lines. */
@@ -691,13 +696,13 @@ public class Diff
     }
 
     /**
-     * Mark to be discarded each line that matches no line of another file. If a line matches many lines, mark it as
-     * provisionally discardable.
+     * Mark to be discarded each line that matches no line of another file. If a
+     * line matches many lines, mark it as provisionally discardable.
      * 
      * @see equivCount()
-     * @param counts
-     *          The count of each equivalence number for the other file.
-     * @return 0=nondiscardable, 1=discardable or 2=provisionally discardable for each line
+     * @param counts The count of each equivalence number for the other file.
+     * @return 0=nondiscardable, 1=discardable or 2=provisionally discardable for
+     *         each line
      */
     private byte[] discardable(final int[] counts)
     {
@@ -707,8 +712,10 @@ public class Diff
       int many = 5;
       int tem = end / 64;
 
-      /* Multiply MANY by approximate square root of number of lines.
-         That is the threshold for provisionally discardable lines.  */
+      /*
+       * Multiply MANY by approximate square root of number of lines. That is the
+       * threshold for provisionally discardable lines.
+       */
       while ((tem = tem >> 2) > 0)
       {
         many *= 2;
@@ -738,8 +745,8 @@ public class Diff
     }
 
     /**
-     * Don't really discard the provisional lines except when they occur in a run of discardables, with nonprovisionals
-     * at the beginning and end.
+     * Don't really discard the provisional lines except when they occur in a run of
+     * discardables, with nonprovisionals at the beginning and end.
      */
     private void filterDiscards(final byte[] discards)
     {
@@ -747,20 +754,22 @@ public class Diff
 
       for (int i = 0; i < end; i++)
       {
-        /* Cancel provisional discards not in middle of run of discards.  */
+        /* Cancel provisional discards not in middle of run of discards. */
         if (discards[i] == 2)
         {
           discards[i] = 0;
         }
         else if (discards[i] != 0)
         {
-          /* We have found a nonprovisional discard.  */
+          /* We have found a nonprovisional discard. */
           int j;
           int length;
           int provisional = 0;
 
-          /* Find end of this run of discardable lines.
-             Count how many are provisionally discardable.  */
+          /*
+           * Find end of this run of discardable lines. Count how many are provisionally
+           * discardable.
+           */
           for (j = i; j < end; j++)
           {
             if (discards[j] == 0)
@@ -774,19 +783,23 @@ public class Diff
             }
           }
 
-          /* Cancel provisional discards at end, and shrink the run.  */
+          /* Cancel provisional discards at end, and shrink the run. */
           while (j > i && discards[j - 1] == 2)
           {
             discards[--j] = 0;
             --provisional;
           }
 
-          /* Now we have the length of a run of discardable lines
-             whose first and last are not provisional.  */
+          /*
+           * Now we have the length of a run of discardable lines whose first and last are
+           * not provisional.
+           */
           length = j - i;
 
-          /* If 1/4 of the lines in the run are provisional,
-             cancel discarding of all provisional lines in the run.  */
+          /*
+           * If 1/4 of the lines in the run are provisional, cancel discarding of all
+           * provisional lines in the run.
+           */
           if (provisional * 4 > length)
           {
             while (j > i)
@@ -803,10 +816,11 @@ public class Diff
             int minimum = 1;
             int tem = length / 4;
 
-            /* MINIMUM is approximate square root of LENGTH/4.
-               A subrun of two or more provisionals can stand
-               when LENGTH is at least 16.
-               A subrun of 4 or more can stand when LENGTH >= 64.  */
+            /*
+             * MINIMUM is approximate square root of LENGTH/4. A subrun of two or more
+             * provisionals can stand when LENGTH is at least 16. A subrun of 4 or more can
+             * stand when LENGTH >= 64.
+             */
             while ((tem = tem >> 2) > 0)
             {
               minimum *= 2;
@@ -814,8 +828,9 @@ public class Diff
 
             minimum++;
 
-            /* Cancel any subrun of MINIMUM or more provisionals
-               within the larger run.  */
+            /*
+             * Cancel any subrun of MINIMUM or more provisionals within the larger run.
+             */
             for (j = 0, consec = 0; j < length; j++)
             {
               if (discards[i + j] != 2)
@@ -824,7 +839,7 @@ public class Diff
               }
               else if (minimum == ++consec)
               {
-                /* Back up to start of subrun, to cancel it all.  */
+                /* Back up to start of subrun, to cancel it all. */
                 j -= consec;
               }
               else if (minimum < consec)
@@ -833,10 +848,11 @@ public class Diff
               }
             }
 
-            /* Scan from beginning of run
-               until we find 3 or more nonprovisionals in a row
-               or until the first nonprovisional at least 8 lines in.
-               Until that point, cancel any provisionals.  */
+            /*
+             * Scan from beginning of run until we find 3 or more nonprovisionals in a row
+             * or until the first nonprovisional at least 8 lines in. Until that point,
+             * cancel any provisionals.
+             */
             for (j = 0, consec = 0; j < length; j++)
             {
               if (j >= 8 && discards[i + j] == 1)
@@ -864,10 +880,10 @@ public class Diff
               }
             }
 
-            /* I advances to the last line of the run.  */
+            /* I advances to the last line of the run. */
             i += length - 1;
 
-            /* Same thing, from end.  */
+            /* Same thing, from end. */
             for (j = 0, consec = 0; j < length; j++)
             {
               if (j >= 8 && discards[i - j] == 1)
@@ -902,8 +918,7 @@ public class Diff
     /**
      * Actually discard the lines.
      * 
-     * @param discards
-     *          flags lines to be discarded
+     * @param discards flags lines to be discarded
      */
     private void discard(byte[] discards)
     {
@@ -926,8 +941,7 @@ public class Diff
       nondiscarded_lines = j;
     }
 
-    file_data(Object[] data,
-        Map h)
+    file_data(Object[] data, Map h)
     {
       buffered_lines = data.length;
 
@@ -941,8 +955,7 @@ public class Diff
 
         if (ir == null)
         {
-          h.put(data[i],
-                new Integer(equivs[i] = equiv_max++));
+          h.put(data[i], Integer.valueOf(equivs[i] = equiv_max++));
         }
         else
         {
@@ -952,14 +965,15 @@ public class Diff
     }
 
     /**
-     * Adjust inserts/deletes of blank lines to join changes as much as possible. We do something when a run of changed
-     * lines include a blank line at one end and have an excluded blank line at the other. We are free to choose which
-     * blank line is included. `compareseq' always chooses the one at the beginning, but usually it is cleaner to
-     * consider the following blank line to be the "change". The only exception is if the preceding blank line would
-     * join this change to other changes.
+     * Adjust inserts/deletes of blank lines to join changes as much as possible. We
+     * do something when a run of changed lines include a blank line at one end and
+     * have an excluded blank line at the other. We are free to choose which blank
+     * line is included. `compareseq' always chooses the one at the beginning, but
+     * usually it is cleaner to consider the following blank line to be the
+     * "change". The only exception is if the preceding blank line would join this
+     * change to other changes.
      * 
-     * @param f
-     *          the file being compared against
+     * @param f the file being compared against
      */
     void shift_boundaries(file_data f)
     {
@@ -977,14 +991,18 @@ public class Diff
         int end;
         int other_start;
 
-        /* Scan forwards to find beginning of another run of changes.
-           Also keep track of the corresponding point in the other file.  */
+        /*
+         * Scan forwards to find beginning of another run of changes. Also keep track of
+         * the corresponding point in the other file.
+         */
         while (i < i_end && !changed[1 + i])
         {
           while (other_changed[1 + j++])
           {
-            /* Non-corresponding lines in the other file
-               will count as the preceding batch of changes.  */
+            /*
+             * Non-corresponding lines in the other file will count as the preceding batch
+             * of changes.
+             */
             other_preceding = j;
           }
 
@@ -1001,7 +1019,7 @@ public class Diff
 
         for (;;)
         {
-          /* Now find the end of this run of changes.  */
+          /* Now find the end of this run of changes. */
           while (i < i_end && changed[1 + i])
           {
             i++;
@@ -1009,23 +1027,27 @@ public class Diff
 
           end = i;
 
-          /* If the first changed line matches the following unchanged one,
-             and this run does not follow right after a previous run,
-             and there are no lines deleted from the other file here,
-             then classify the first changed line as unchanged
-             and the following line as changed in its place.  */
+          /*
+           * If the first changed line matches the following unchanged one, and this run
+           * does not follow right after a previous run, and there are no lines deleted
+           * from the other file here, then classify the first changed line as unchanged
+           * and the following line as changed in its place.
+           */
 
-          /* You might ask, how could this run follow right after another?
-             Only because the previous run was shifted here.  */
+          /*
+           * You might ask, how could this run follow right after another? Only because
+           * the previous run was shifted here.
+           */
           if (end != i_end && equivs[start] == equivs[end] && !other_changed[1 + j] && end != i_end
               && !((preceding >= 0 && start == preceding) || (other_preceding >= 0 && other_start == other_preceding)))
           {
             changed[1 + end++] = true;
             changed[1 + start++] = false;
             ++i;
-            /* Since one line-that-matches is now before this run
-               instead of after, we must advance in the other file
-               to keep in synch.  */
+            /*
+             * Since one line-that-matches is now before this run instead of after, we must
+             * advance in the other file to keep in synch.
+             */
             ++j;
           }
           else
@@ -1043,19 +1065,21 @@ public class Diff
     final int buffered_lines;
 
     /**
-     * Vector, indexed by line number, containing an equivalence code for each line. It is this vector that is actually
-     * compared with that of another file to generate differences.
+     * Vector, indexed by line number, containing an equivalence code for each line.
+     * It is this vector that is actually compared with that of another file to
+     * generate differences.
      */
     private final int[] equivs;
 
     /**
-     * Vector, like the previous one except that the elements for discarded lines have been squeezed out.
+     * Vector, like the previous one except that the elements for discarded lines
+     * have been squeezed out.
      */
     final int[] undiscarded;
 
     /**
-     * Vector mapping virtual line numbers (not counting discarded lines) to real ones (counting those lines). Both are
-     * origin-0.
+     * Vector mapping virtual line numbers (not counting discarded lines) to real
+     * ones (counting those lines). Both are origin-0.
      */
     final int[] realindexes;
 
@@ -1063,8 +1087,8 @@ public class Diff
     int nondiscarded_lines;
 
     /**
-     * Array, indexed by real origin-1 line number, containing true for a line that is an insertion or a deletion. The
-     * results of comparison are stored here.
+     * Array, indexed by real origin-1 line number, containing true for a line that
+     * is an insertion or a deletion. The results of comparison are stored here.
      */
     boolean[] changed_flag;
   }
