@@ -37,10 +37,10 @@ public class JMHighlighter
     implements Highlighter
 {
   // static variables:
-  public static final Integer LAYER0 = new Integer(1);
-  public static final Integer LAYER1 = new Integer(2);
-  public static final Integer LAYER2 = new Integer(3);
-  public static final Integer LAYER3 = new Integer(4);
+  public static final Integer LAYER0 = Integer.valueOf(1);
+  public static final Integer LAYER1 = Integer.valueOf(2);
+  public static final Integer LAYER2 = Integer.valueOf(3);
+  public static final Integer LAYER3 = Integer.valueOf(4);
   public static final Integer UPPER_LAYER;
   private static ArrayList<Integer> layers;
 
@@ -71,8 +71,7 @@ public class JMHighlighter
   /**
    * Renders the highlights.
    *
-   * @param g
-   *          the graphics context
+   * @param g the graphics context
    */
   public void paint(Graphics g)
   {
@@ -88,10 +87,8 @@ public class JMHighlighter
 
     clip = g.getClipBounds();
     lineHeight = component.getFontMetrics(component.getFont()).getHeight();
-    startOffset = component.viewToModel(new Point(clip.x - lineHeight,
-                                                  clip.y));
-    endOffset = component.viewToModel(new Point(clip.x,
-                                                clip.y + clip.height + lineHeight));
+    startOffset = component.viewToModel(new Point(clip.x - lineHeight, clip.y));
+    endOffset = component.viewToModel(new Point(clip.x, clip.y + clip.height + lineHeight));
 
     // Just some hacks to allow linenumbers painted in the emptyborder.
     lineNumberBorder = null;
@@ -137,19 +134,13 @@ public class JMHighlighter
           continue;
         }
 
-        hli.getPainter().paint(g,
-                               hli.getStartOffset(),
-                               hli.getEndOffset(),
-                               a,
-                               component);
+        hli.getPainter().paint(g, hli.getStartOffset(), hli.getEndOffset(), a, component);
       }
     }
 
     if (lineNumberBorder != null)
     {
-      lineNumberBorder.paintAfter(g,
-                                  startOffset,
-                                  endOffset);
+      lineNumberBorder.paintAfter(g, startOffset, endOffset);
     }
   }
 
@@ -164,21 +155,12 @@ public class JMHighlighter
     component = null;
   }
 
-  public Object addHighlight(int p0,
-      int p1,
-      Highlighter.HighlightPainter painter)
-      throws BadLocationException
+  public Object addHighlight(int p0, int p1, Highlighter.HighlightPainter painter) throws BadLocationException
   {
-    return addHighlight(UPPER_LAYER,
-                        p0,
-                        p1,
-                        painter);
+    return addHighlight(UPPER_LAYER, p0, p1, painter);
   }
 
-  public Object addHighlight(Integer layer,
-      int p0,
-      int p1,
-      Highlighter.HighlightPainter painter)
+  public Object addHighlight(Integer layer, int p0, int p1, Highlighter.HighlightPainter painter)
       throws BadLocationException
   {
     Document doc;
@@ -199,12 +181,10 @@ public class JMHighlighter
 
   public void removeHighlight(Object object)
   {
-    removeHighlight(UPPER_LAYER,
-                    object);
+    removeHighlight(UPPER_LAYER, object);
   }
 
-  public void removeHighlight(Integer layer,
-      Object object)
+  public void removeHighlight(Integer layer, Object object)
   {
     getLayer(layer).remove(object);
     repaint();
@@ -228,22 +208,12 @@ public class JMHighlighter
     repaint();
   }
 
-  public void changeHighlight(Object object,
-      int p0,
-      int p1)
-      throws BadLocationException
+  public void changeHighlight(Object object, int p0, int p1) throws BadLocationException
   {
-    changeHighlight(UPPER_LAYER,
-                    object,
-                    p0,
-                    p1);
+    changeHighlight(UPPER_LAYER, object, p0, p1);
   }
 
-  public void changeHighlight(Integer layer,
-      Object object,
-      int p0,
-      int p1)
-      throws BadLocationException
+  public void changeHighlight(Integer layer, Object object, int p0, int p1) throws BadLocationException
   {
     Document doc;
     HighlightInfo hli;
@@ -258,7 +228,8 @@ public class JMHighlighter
   }
 
   /**
-   * Makes a copy of the highlights. Does not actually clone each highlight, but only makes references to them.
+   * Makes a copy of the highlights. Does not actually clone each highlight, but
+   * only makes references to them.
    *
    * @return the copy
    * @see Highlighter#getHighlights
@@ -297,8 +268,7 @@ public class JMHighlighter
     if (result == null)
     {
       result = new ArrayList<Highlighter.Highlight>();
-      highlights.put(layer,
-                     result);
+      highlights.put(layer, result);
     }
 
     return result;
